2007-08-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb: cleanup.

2007-08-30  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* src/lib/mkmf-gnome2.rb: re-supported build in no-source
	directory.

2007-08-14  Vincent Isambart <vincent.isambart@gmail.com>
	* src/utils_int64.c: included rbglib.h instead of ruby.h
	because utils_int64.c uses the RVAL2CBOOL macro that is declared
	in rbglib.h and thus resulted in a dynamic link error on Mac
	that the system could not find a RVAL2CBOOL function.

2007-08-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_enums.c: supported convenience GEnum and GFlags
	notation. e.g.:
	  GLib::UTF8.normalize(utf8, GLib::NormalizeMode::NFD)
          ->
	  GLib::UTF8.normalize(utf8, :nfd)

	  key_file.load_from_data(data,
	                          GLib::KeyFile::KEEP_COMMENTS |
	                          GLib::KeyFile::KEEP_TRANSLATIONS)
	  ->
	  key_file.load_from_data(data, [:keep_contents, :keep_translations])

	* tests/test_enum.rb: added tests for the above feature.

2007-07-25  Sjoerd Simons   <sjoerd@luon.net>
	* src/rbgobj_signal.c: Properly use the GValueArray api in emit_body.
	Causes all values in the parameter array to be unset after emission.
	Fixing some reference leaks.

2007-07-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_object.c, src/rbgobject.h: deperecate
	rbgobj_add_abstract_but_create_instance_class() and
	move abstract-type check from .allocate to dummy #initialize.

2007-07-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobj_type.c: use rbgobj_init_object_class() to initialize
	object class.
	* src/rbgobj_object.c, src/global.h: add new function
	rbgobj_init_object_class().

	* src/rbgobj_object.c (rbgobj_gobject_new): check returned value of
	g_object_newv().

2007-07-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgobject.h: remove unused/undefined functions
	rbgobj_boxed_ref() and rbgobj_boxed_unref().
	