@@ -1,5 +1,8 @@
 2007-08-30  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbglib_maincontext.c (timeout_add_seconds): used
+	g_timeout_add_seconds_full() not g_timeout_add_seconds().
+
 	* src/lib/mkmf-gnome2.rb: cleanup.
 
 2007-08-30  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
